<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="@dimen/app_title"
        android:layout_marginTop="@dimen/login_margin_top"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/user_register_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_nickname"
        android:textSize="@dimen/login_edit_text"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_register_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_first_name"
        android:textSize="@dimen/login_edit_text"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_register_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_last_name"
        android:textSize="@dimen/login_edit_text"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:textSize="@dimen/login_edit_text"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:textSize="@dimen/login_edit_text"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/user_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginTop="@dimen/login_margin_top"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:textColor="@android:color/black" />

</LinearLayout>