<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/app_title"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/user_login_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/user_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:textSize="@dimen/login_edit_text"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        app:layout_constraintBottom_toTopOf="@id/user_login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <EditText
        android:id="@+id/user_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:textSize="@dimen/login_edit_text"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        app:layout_constraintBottom_toTopOf="@+id/user_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/user_login_email" />


    <Button
        android:id="@+id/user_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginTop="@dimen/login_margin_top"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/user_login_registration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_login_password" />

    <TextView
        android:id="@+id/user_login_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_top"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:textSize="@dimen/login_edit_text"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/user_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_registration" />

</android.support.constraint.ConstraintLayout>